--- a/home.html
+++ b/home.html
@@ -142,7 +142,7 @@
     </section>
    
 
-    <section class="section">
+    <section class="container section">
       <div style="width: 80%" class="m-auto">
         <h2 class="text special-text">
           <span style="border-bottom: 4px solid #5c068c" class="pb-2 ">Top</span
@@ -267,7 +267,7 @@
     <section class="section" style="background-color: #e5e5ea">
       <br>
       <br>
-      <div class="m-auto pt-5" style="width: 80%; z-index: 2">
+      <div class="m-auto container pt-5">
 
       <div class="row">
         <div class="col-sm-12 col-md-6">
@@ -591,7 +591,7 @@
       </div>
     </section>
 
-    <section class="section m-auto" style="width: 80%;">
+    <section class="section m-auto container">
       <div class="row">
         <div class="col-md-12 image-container-two col-lg-12 col-xl-6" style="display: flex; justify-content: center; align-items: center;">
           <img src="./images/download.jpg" width="98%" style="border-top-right-radius: 160px;" alt="">
@@ -615,7 +615,7 @@
     </section>
 
     <section class="section" style="background-color: #e5e5ea">
-      <div class="m-auto" style="width: 80%; z-index: 2">
+      <div class="m-auto container" >
         <div
           class="row"
           style="display: flex; justify-content: center; align-items: center"
@@ -659,7 +659,7 @@
         </div>
       </div>
     </section>
-    <section class="section m-auto" style="width: 80%; z-index: 10 !important">
+    <section class="section container m-auto" >
       <center>
         <h2 style="color: #5c068c" class="font-weight-bold">
           <span style="border-bottom: 3px solid #5c068c">Pro</span>-Advice
@@ -682,7 +682,7 @@
       </center>
     </section>
 
-    <section class="section m-auto" style="width: 80%">
+    <section class="section container m-auto">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -766,7 +766,7 @@
       <br />
     </section>
 
-    <section class="section m-auto" style="width: 80%">
+    <section class="section container m-auto" >
       <center>
         <h2 style="color: rgb(0, 0, 51)" class="font-weight-bold">
           Blog <span style="border-bottom: 3px solid #000033">and</span> news
@@ -948,7 +948,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 87%">
+      <div class="row container m-auto" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -1012,7 +1012,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 92%" class="m-auto">
+      <div class="m-auto container">
         <div class="row special-row">
           <div class="col-sm-12 col-md-9">
             ProAdvice © 2021 &nbsp;&nbsp;
