--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 80%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+        
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -285,7 +285,7 @@
           <a name="" id="" class="btn btn-warning text-uppercase pl-5 pr-5 pt-3 pb-3 font-weight-bold" href="#" role="button">Find expert now</a>
         </div>
         <div class="d-none d-md-block col-6 iphone-img">
-          <img src="./images/iphone.png" height="550px" alt="">
+          <img src="./images/iphone.png" alt="">
         </div>
       </div>
       <br>
@@ -652,9 +652,9 @@
           </div>
           <div
             class="col-md-12 col-lg-5 pt-5"
-            style="display: flex; justify-content: flex-start"
+            style="display: flex; justify-content:center; align-items: center;"
           >
-                <img src="./images/iphones.png" style="width: 490px" alt="" />
+                <img src="./images/iphones.png" class="iphoness" alt="" />
           </div>
         </div>
       </div>
