Fixed search bar

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
     </header>
 
     <section class="styled-section background p-5 text-white">
-      <center>
+      <center class="container">
         <h3>Search for World Class Advice Providers</h3>
         <h6>Connect with them to seek Professional Advice over a Call</h6>
         <form action="" class="form-head">
