Working on Dashboard-UI

--- a/call-end.html
+++ b/call-end.html
@@ -29,7 +29,7 @@
         /* border-bottom-right-radius: 100px; */
       }
       .section {
-        margin: 100px 0;
+        margin: 100px auto;
       }
       .styled-font {
         font-family: "Dancing Script", cursive;
@@ -120,9 +120,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 80%"
-      >
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+              >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
             <span style="border-bottom: 4px solid #5c068c">Pro</span>-Advice
@@ -161,8 +160,8 @@
       </nav>
     </header>
 
-    <section class="section">
-      <div class="card w-75 m-auto shadow">
+    <section class="section container">
+      <div class="card m-auto shadow">
         <div class="card-body p-5">
           <center>
               <div>
@@ -241,16 +240,16 @@
             <p class="mt-4"><i class="fa fa-user text" aria-hidden="true"></i> &nbsp; Dentist</p>
             <br>
             
-            <button type="button" name="" id="" style="font-weight: 700;padding: 10px 20px; width: 330px;" class="btn btn-warning  text-uppercase btn-block">Give RAtings & Reviews</button>
+            <button type="button" name="" id="" style="font-weight: 700;padding: 10px 20px;" class="btn btn-warning text-uppercase btn-block">Give RAtings & Reviews</button>
             <br>
-            <button type="button" name="" id="" style="font-weight: 700;padding: 10px 20px; width: 330px;" class="btn btn-outline-warning text-uppercase  btn-block">Later</button>
+            <button type="button" name="" id="" style="font-weight: 700;padding: 10px 20px;" class="btn btn-outline-warning  text-uppercase  btn-block">Later</button>
           </center>
         </div>
       </div>
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row container m-auto">
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -314,7 +313,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
