--- a/confirm-details.html
+++ b/confirm-details.html
@@ -102,8 +102,8 @@
           </p>
         </div>
         <nav
-          class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-          style="width: 87%"
+          class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+         
         >
           <a class="navbar-brand" href="index.html">
             <h2 class="text">
@@ -143,7 +143,7 @@
         </nav>
       </header>
     <header style="background-color: #5c068c" class="pb-3 pt-1">
-      <div style="width: 80%" class="m-auto text-white">
+      <div class="m-auto text-white  container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             <nav class="breadcrumb bg-transparent">
@@ -158,17 +158,17 @@
       </div>
     </header>
 
-   <section class="section" style="width: 80%;">
+   <section class="section container" >
        <div class="card shadow">
            <div class="card-body">
                <div class="row">
-                   <div class="col-3" style="display: flex;justify-content: center; align-items: center;">
+                   <div class="col-sm-12 col-md-3" style="display: flex;justify-content: center; align-items: center;">
                         <div class="image-container">
                             <img src="./images/ruby.png" alt="Dr. Ruby Perrin" class="avatar-img" />
                             <p class="online"></p>
                         </div>
                    </div>
-                   <div class="col" style="display: flex;justify-content: center; align-items: flex-start;flex-direction: column;">
+                   <div class="col-sm-12 col-md-9" style="display: flex;justify-content: center; align-items: flex-start;flex-direction: column;">
                        <h3 class="font-weight-bold">
                            Dr. Ruby Perrin  <i class="fa fa-check-circle text-warning" aria-hidden="true"></i>
                        </h3>
@@ -286,7 +286,7 @@
    </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row container m-auto" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -350,7 +350,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div  class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
