--- a/call-request-accept.html
+++ b/call-request-accept.html
@@ -29,7 +29,7 @@
         /* border-bottom-right-radius: 100px; */
       }
       .section {
-        margin: 100px 0;
+        margin: 100px auto;
       }
       .styled-font {
         font-family: "Dancing Script", cursive;
@@ -112,7 +112,7 @@
   </head>
   <body>
     <header class="shadow">
-      <div class="container-fluid m-auto" style="width: 80%">
+      <div class="container-fluid m-auto" style="width:80%">
         <p class="text-right pt-3 pb-3">
           <a href="" class="text-dark">Blog</a> |
           <a href="" class="text-dark">Customer Services</a> |
@@ -120,8 +120,7 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 80%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -161,8 +160,8 @@
       </nav>
     </header>
 
-    <section class="section">
-      <div class="card w-75 m-auto shadow">
+    <section class="section container">
+      <div class="card  m-auto shadow">
         <div class="card-body p-5">
           <center>
             <br />
@@ -241,7 +240,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row m-auto container" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -305,7 +304,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div  class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
