--- a/chat-request-sent.html
+++ b/chat-request-sent.html
@@ -29,7 +29,7 @@
         /* border-bottom-right-radius: 100px; */
       }
       .section {
-        margin: 100px 0;
+        margin: 100px auto;
       }
       .styled-font {
         font-family: "Dancing Script", cursive;
@@ -190,8 +190,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 80%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+    
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -231,8 +231,8 @@
       </nav>
     </header>
 
-    <section class="section">
-      <div class="card w-75 m-auto shadow">
+    <section class="section container">
+      <div class="card m-auto shadow">
         <div class="card-body p-5">
           <center>
               <div>
@@ -268,7 +268,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row m-auto container" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -332,7 +332,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
