--- a/create-an-account.html
+++ b/create-an-account.html
@@ -29,7 +29,7 @@
         /* border-bottom-right-radius: 100px; */
       }
       .section {
-        margin: 100px 0;
+        margin: 100px auto;
       }
       .styled-font {
         font-family: "Dancing Script", cursive;
@@ -122,8 +122,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 87%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+     
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -162,8 +162,8 @@
         </div>
       </nav>
     </header>
-    <section class="section">
-      <div class="card w-75 m-auto shadow">
+    <section class="section container">
+      <div class="card  m-auto shadow">
         <div class="card-header" style="background-color: #5c068c">
           <div class="row pt-3 pb-3 pl-5 pr-5 text-white">
             <div class="col-8">
@@ -357,7 +357,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row container m-auto" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -421,7 +421,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
