--- a/email-advice-request-sent.html
+++ b/email-advice-request-sent.html
@@ -28,7 +28,7 @@
         /* border-bottom-right-radius: 100px; */
       }
       .section {
-        margin: 100px 0;
+        margin: 100px auto;
       }
       .icon-container {
         width: 15%;
@@ -92,8 +92,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 80%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+      
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -133,8 +133,8 @@
       </nav>
     </header>
 
-    <section class="section">
-      <div class="card w-75 m-auto shadow">
+    <section class="section container">
+      <div class="card m-auto shadow">
         <div class="card-body p-5">
           <center>
             <h3 class="card-title" style="font-weight: bold">
@@ -207,7 +207,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row m-auto container" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -271,7 +271,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div  class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
