--- a/search-result.html
+++ b/search-result.html
@@ -81,8 +81,8 @@
         </p>
       </div>
       <nav
-        class="navbar m-auto navbar-expand-sm navbar-light pb-5"
-        style="width: 87%"
+        class="navbar container m-auto navbar-expand-sm navbar-light pb-5"
+       
       >
         <a class="navbar-brand" href="index.html">
           <h2 class="text">
@@ -122,7 +122,7 @@
       </nav>
     </header>
     <header style="background-color: #5c068c" class="pb-3 pt-1">
-      <div style="width: 80%" class="m-auto text-white">
+      <div  class="m-auto text-white container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             <nav class="breadcrumb bg-transparent">
@@ -150,7 +150,7 @@
       </div>
     </header>
 
-    <section class="section" style="width: 80%">
+    <section class="section container">
       <div class="row">
         <div class="col-4 pr-4">
           <div class="card">
@@ -879,7 +879,7 @@
     </section>
 
     <footer style="background-color: #000033" class="p-5">
-      <div class="row m-auto" style="width: 80%">
+      <div class="row m-auto container" >
         <div class="col">
           <h5 class="text-white">ProAdvice</h5>
           <br />
@@ -943,7 +943,7 @@
       </div>
     </footer>
     <div class="p-4 text-white" style="background-color: #5c068c">
-      <div style="width: 80%" class="m-auto">
+      <div class="m-auto container">
         <div class="row">
           <div class="col-sm-12 col-md-10">
             ProAdvice © 2021 &nbsp;&nbsp;
