--- a/billing-and-payment.html
+++ b/billing-and-payment.html
@@ -94,6 +94,17 @@
         width: 100%;
         border-radius: 50%;
       }
+      .vertical-center {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+      }
+      .custom-control-input:checked~.custom-control-label::before {
+    color: #fff;
+    border-color: #2DB70C;
+    background-color: #2DB70C;
+}
     </style>
   </head>
   <body>
@@ -165,13 +176,13 @@
                 <p class="text-center"><i class="fa fa-calendar" aria-hidden="true"></i> 02 Jul 1998, 24 years <br> <i class="fa fa-map-marker" aria-hidden="true"></i> New York, USA</p>
                   <hr style="width: 90%; background-color: #B59DC2;" />
                   <div class=" text-center">
-                    <a name="" id="" class="btn mt-2 btn-warning w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Dashboard</a>
+                    <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Dashboard</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-sticky-note" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; My Appointments</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-history" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Logs & Order History</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-star" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Reviews</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-user-tag" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; My favourite experts</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; My Profile & settings</a>
-                    <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-shield-alt" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Billings & Payments</a>
+                    <a name="" id="" class="btn mt-2 btn-warning w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-shield-alt" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Billings & Payments</a>
                     <a name="" id="" class="btn mt-2 w-75 text-left text-white" style="border-radius: 5px; background-color: FAC657 !important;" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp; Support</a>
                     <br>
                     <br>
@@ -187,46 +198,83 @@
                 <a class="breadcrumb-item text-dark" href="#">My Account</a>
                 <span class="breadcrumb-item active">Dashboard</span>
               </nav>
-              <div class=" p-3">
-                <h3 class="mb-4" style="font-weight: bolder;">Hi Smith ! Welcome to your dashboard</h3>
-                <div class="card shadow">
-                  <div class="card-body p-0 m-0">
-                    <table class="w-100">
-                      <br>
-                      <tr style="display: flex;">
-                        <td class="w-50" style="display: flex; justify-content: center; align-items: center; flex-direction: column; border-right: 2px solid #E9ECEF;">
-                          <h1 style="font-weight: bolder;">0</h1>
-                          <p>
-                          <i class="fa fa-phone text-warning" style="font-size: 20px;" aria-hidden="true"></i> Calls
-                        </p>
-                        </td>
-                        <td class="w-50" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-                          <h1 style="font-weight: bolder;">0</h1>
-                          <p>
-                          <i class="fa fa-star text-warning" style="font-size: 20px;" aria-hidden="true"></i> Reviews
-                        </p>
-                        </td>
-                      </tr>
-                    </table>
-                   <div class="jumbotron p-5 mt-3">
-                     <div class="row">
-                       <div class="col-sm-12 col-md-4" style="display: flex; align-items: center; justify-content: flex-start;">
-                        <p class="h4" style="font-weight: 500;">Verified</p>
-                       </div>
-                       <div class="col-sm-12 col-md-8" style="display: flex; align-items: center; justify-content: flex-end;">
-                         <button type="button" name="" id="" class="btn btn-lg btn-success" style="border-radius: 50%;"><i class="fa fa-phone" aria-hidden="true"></i></button>&nbsp;&nbsp;
-                         <button type="button" name="" id="" class="btn btn-lg btn-light" style="border-radius: 50%;"><i class="fa fa-linkedin" aria-hidden="true"></i></button>&nbsp;&nbsp;
-                         <button type="button" name="" id="" class="btn btn-lg btn-success" style="border-radius: 50%;"><i class="fa fa-twitter" aria-hidden="true"></i></button>&nbsp;&nbsp;
-                         <button type="button" name="" id="" class="btn btn-lg btn-light" style="border-radius: 50%;"><i class="fa fa-facebook" aria-hidden="true"></i></button>&nbsp;&nbsp;
+              <div class="pr-5 pl-5 pt-4">
+                <h3 class="mb-4" style="font-weight: bolder;">Billing & Payments</h3>
+                <h4 class="mb-4 text-secondary" style="font-weight: bolder;">Payment Methods</h4>
+                <br>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="card shadow-sm p-4">
+                            <div class="card-body">
+                                <div class="row w-100">
+                                  <div class="col-3">
+                                      <h4>VISA</h4>
+                                  </div>
+                                  <div class="col-9">
+                                      <h4>xxxx xxxx xxxx 1234</h4>
+                                      <small>Expires 05/25</small>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="background-color: white;">
+                                <button type="button" name="" id="" class="btn text-warning">Primary Billing</button>
+                                <button type="button" name="" id="" class="btn text">Remove</button>
+                                <button type="button" name="" id="" class="btn text">Edit</button>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card shadow-sm p-4">
+                            <div class="card-body">
+                                <div class="row w-100">
+                                  <div class="col-3">
+                                      <h4>VISA</h4>
+                                  </div>
+                                  <div class="col-9">
+                                      <h4>xxxx xxxx xxxx 1234</h4>
+                                      <small>Expires 05/25</small>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="background-color: white;">
+                                <button type="button" name="" id="" class="btn text-warning">Primary Billing</button>
+                                <button type="button" name="" id="" class="btn text">Remove</button>
+                                <button type="button" name="" id="" class="btn text">Edit</button>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-6 mt-3">
+                        <div class="card shadow-sm p-4">
+                            <div class="card-body">
+                                <div class="row w-100">
+                                  <div class="col-3">
+                                      <h4>VISA</h4>
+                                  </div>
+                                  <div class="col-9">
+                                      <h4>xxxx xxxx xxxx 1234</h4>
+                                      <small>Expires 05/25</small>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="background-color: white;">
+                                <button type="button" name="" id="" class="btn text-warning">Primary Billing</button>
+                                <button type="button" name="" id="" class="btn text">Remove</button>
+                                <button type="button" name="" id="" class="btn text">Edit</button>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-6 mt-3">
+                        <div class="card p-5" style="border-style: dashed;">
+                            <div class="card-body text-center">
+                                <button type="button" name="" id="" class="btn btn-background btn-lg" style="border-radius: 50%;"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                               <br>
+                                <p class="card-text mt-1 text">Add new payment method</p>
+                            </div>
                         </div>
-                     </div>
-                   </div>
-                   <div class="text-center h5">
-                     Member since May 2021
-                   </div>
-                   <br>
-                  </div>
+                    </div>
                 </div>
+               
+               
               </div>
             </div>
         </div>
